--- a/netReptile/package.json
+++ b/netReptile/package.json
@@ -13,7 +13,9 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "node-mysql": "^0.4.2",
     "request": "^2.82.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "util": "^0.10.3"
   }
 }
