--- a/netReptile/package.json
+++ b/netReptile/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "~1.17.1",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "mongoose": "^4.12.1",
     "morgan": "~1.8.1",
     "node-mysql": "^0.4.2",
     "request": "^2.82.0",
